--- a/templates/sign/newpass.html.twig
+++ b/templates/sign/newpass.html.twig
@@ -19,14 +19,20 @@
                 <div class="p-8">
                     <form method="POST" class="" action="#" onsubmit="return false;" {{ stimulus_controller('forgotpass') }}>
                         
-                        <div class="mb-5">
-                            <label for="email" class="block mb-2 text-sm font-medium text-gray-600">Email</label>
-                            <input type="text" name="email"  placeholder="Email" {{stimulus_target('forgotpass' ,'email')}} 
+                        <div class="mb-2">
+                            <label for="password" class="block mb-2 text-sm font-medium text-gray-600">Change Password</label>
+                            <input type="password" name="password"  placeholder="New Password"  {{stimulus_target('forgotpass' ,'pass')}}
+                                    class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
+                        </div>
+
+                        <div class="mb-5">              
+                            {# <label for="confirmpassword" class="block mb-2 text-sm font-medium text-gray-600">Confirm Password</label> #}
+                            <input type="password" name="confirmpassword" placeholder="Confirm Password"  {{stimulus_target('forgotpass' ,'cpass')}}
                                 class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
                         </div>
 
                         <button class="w-full mt-4  bg-blue-500 text-white font-bold p-4 rounded-lg 
-                                    hover:bg-blue-700 transition-all duration-200" {{stimulus_action('forgotpass' ,"getNewPassword")}} >
+                                    hover:bg-blue-700 transition-all duration-200" {{stimulus_action('forgotpass' ,"saveNewPassword")}} >
                             Change Password
                         </button>
                     </form>
