Added Alerts, UI more modern-ish

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -10,15 +10,15 @@
     <title>Admin </title>
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/869334941337546782/1036327824862220378/Method_Draw_Image.png">
 </head>
-<body class="bg-blue-200">
-    <div class="bg-blue-200 min-h-screen h-fit flex justify-center mb-10" >
+<body class="bg-blue-200 bg-gradient-to-tr from-blue-200 to-blue-400 scrollbar">
+    <div class="min-h-screen h-fit flex justify-center mb-10" >
         <div {{ stimulus_controller('genimage') }} 
             class="bg-white w-10/12 absolute top-0 h-16 rounded-b-lg mx-auto flex items-center px-5 ">
             <h2  {{stimulus_target("genimage","username")}} class="" >Logged in as <span id="loggedUsername" class="font-bold" ></span> </h2>
             <div class="absolute right-5 flex flex-row gap-10 ">
-                <h2> <a class="no-underline hover:scale-x-110 transition-all duration-200 " href="/">Generate Image</a> </h2>
-                <h2> <a class="no-underline hover:scale-x-110 transition-all duration-200 " href="/collection">Visit Collection</a> </h2>
-                <h2  class="cursor-pointer" >
+                <h2   class="cursor-pointer hover:scale-x-110 transition-all duration-100" > <a class="no-underline hover:scale-x-110 transition-all duration-200 " href="/">Generate Image</a> </h2>
+                <h2   class="cursor-pointer hover:scale-x-110 transition-all duration-100" > <a class="no-underline hover:scale-x-110 transition-all duration-200 " href="/collection">Visit Collection</a> </h2>
+                <h2   class="cursor-pointer hover:scale-x-110 transition-all duration-100"    >
                     <a {{stimulus_action("genimage","logout")}} class="no-underline hover:scale-110 transition-all duration-200 " > Logout </a>
                 </h2>                
             </div>
