--- a/templates/lucky/stimulus.html.twig
+++ b/templates/lucky/stimulus.html.twig
@@ -11,20 +11,20 @@
     <title>Generate Image Using Dall-E </title>
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/869334941337546782/1036327824862220378/Method_Draw_Image.png">
 </head>
-<body class="bg-blue-200 h-fit"{{ stimulus_controller('genimage') }}>
+<body class="bg-blue-200 bg-gradient-to-tr from-blue-200 to-blue-400 h-fit scrollbar"{{ stimulus_controller('genimage') }}>
     <div class=" min-h-screen flex items-center justify-center"  >
 
         <div class="bg-white w-10/12 absolute top-0 h-16 rounded-b-lg mx-auto flex items-center px-5 ">
             <h2  {{stimulus_target("genimage","username")}} class="" >
                 Logged in as 
-                <span id="loggedUsername" class="font-bold" ></span>, with
+                <span id="loggedUsername" class="font-bold" ></span>, you have
                 <span id="numberOfCredits" class="font-bold" ></span> credits
 
             </h2>
             <div class="absolute right-5 flex flex-row gap-10 ">
-                <h2> <a id="admin" class="no-underline hidden" href="/admin">Admin Panel</a> </h2>
-                <h2> <a class="no-underline" href="/collection">Visit Collection</a> </h2>
-                <h2  class="cursor-pointer" >
+                <h2 class="hover:scale-x-110 transition-all duration-100"> <a id="admin" class="no-underline hidden" href="/admin">Admin Panel</a> </h2>
+                <h2 class="hover:scale-x-110 transition-all duration-100"> <a class="no-underline" href="/collection">Visit Collection</a> </h2>
+                <h2  class="cursor-pointer hover:scale-x-110 transition-all duration-100" >
                     <a {{stimulus_action("genimage","logout")}} class="no-underline" > Logout </a>
                 </h2>                
             </div>
@@ -50,11 +50,6 @@
         </a>
     </div>
 
-    <section id="imagesThisSession" class="bg-white p-10 rounded-lg shadow md:w-3/4 mx-auto lg:w-3/4 
-                transition-all duration-200 
-                items-center content-center hidden grid-cols-3 gap-4 
-                h-fit mb-10" >
-
         {# <div class="flex flex-col justify-center items-center h-80 "> 
             <img class="w-48 rounded-md shadow-md " src="URLFORSUPA/storage/v1/object/public/symfony/arfizato0/02-12-2022%2009:14:09.png" alt="test" />
             <p class=" h-16 py-1 overflow-y-auto scrollbar text-center align-middle "> waw </p>
@@ -79,7 +74,10 @@
                 Delete 
             </button>
         </div> #}
-    </section>
+    <section id="imagesThisSession" class="bg-white p-10 rounded-lg shadow md:w-3/4 mx-auto lg:w-3/4 
+                transition-all duration-200 
+                items-center content-center hidden grid-cols-3 gap-4 
+                h-fit mb-10" ></section>
     <script>
         // to verify if user is logged in 
         window.onload= function(){            
